--- a/pages/common/search/search.wxss
+++ b/pages/common/search/search.wxss
@@ -3,6 +3,7 @@ page{
 }
 .search-from {
   display: flex;
+  align-items: center;
 }
 
 .from-input {
@@ -132,25 +133,25 @@ page{
   display: flex;
   justify-content: space-between;
   align-items: stretch;
-  padding: 0 20rpx;
+  line-height: 80rpx;
+  border-bottom: 1rpx solid #eee;
 }
-
+.my-list-item:last-child{
+  border-bottom: 0;
+}
 .my-list-name {
   flex-grow: 1;
-  line-height: 80rpx;
   color: #666;
+  padding-left: 20rpx;
 }
 
 .my-list-icon {
   width: 80rpx;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
+  justify-content: center;
 }
 
 .my-list-icon-i {
-  height: 30rpx;
-  line-height: 30rpx;
-  margin: 0;
-  padding: 0;
+  line-height: normal !important;
 }
