--- a/assets/styles/color.wxss
+++ b/assets/styles/color.wxss
@@ -2,22 +2,22 @@
 主色系列
  */
 .color-primary{color: #733429 !important;}
-.color-assistant{color: #7ebc2d !important;}
+.color-assistant{color: #ffbb12 !important;}
 .color-minor{color: #d3ebff !important;}
 
 /**
 主色背景系列
  */
 .color-primary-back{background-color: #733429 !important;}
-.color-assistant-back{background-color: #7ebc2d !important;}
+.color-assistant-back{background-color: #ffbb12 !important;}
 .color-minor-back{background-color: #d3ebff !important;}
-.color-linear{background: linear-gradient(to right, #57b3ff, #7ebc2d);}
+.color-linear{background: linear-gradient(to right, #57b3ff, #ffbb12);}
 
 /**
 边框颜色
  */
 .color-primary-border{border-color: #733429 !important;}
-.color-assistant-border{border-color: #7ebc2d !important;}
+.color-assistant-border{border-color: #ffbb12 !important;}
 .color-minor-border{border-color: #d3ebff !important;}
 .color-gray-border{border-color: #f0f0f0 !important;}
 
@@ -26,7 +26,7 @@
 after before 颜色
  */
 .color-primary-after::after, .color-primary-after::before{ border-color: #733429 !important; color: #733429 !important;background-color: #733429 !important;}
-.color-assistant-after::after, .color-assistant-after::before{border-color: #7ebc2d !important; color: #7ebc2d !important;background-color: #7ebc2d !important;}
+.color-assistant-after::after, .color-assistant-after::before{border-color: #ffbb12 !important; color: #ffbb12 !important;background-color: #ffbb12 !important;}
 .color-minor-after::after, .color-minor-after::before{border-color: #d3ebff !important; color: #d3ebff !important;background-color: #d3ebff !important;}
 
 /**
@@ -36,10 +36,10 @@ after before 颜色
 .color-neutral-gray{color: #88898d !important;}
 .color-light-gray{color: #ebebeb !important;}
 
-.color-green{color: #7ebc2d !important;}
+.color-green{color: #ffbb12 !important;}
 .color-red{color: #ff3e02 !important;}
 
-.color-green-back{background-color: #7ebc2d !important;}
+.color-green-back{background-color: #ffbb12 !important;}
 .color-red-back{background-color: #ff3e02 !important;}
 .color-gray-back{background-color: #f0f0f0 !important;}
 .color-light-gray-back{background-color: #f7f7f7 !important;}
@@ -63,7 +63,7 @@ button hover
   background-color: #ee1f20 !important;
 }
 .assistant-hover{
-    background-color: #7ebc2d !important;
+    background-color: #ffbb12 !important;
 }
 .minor-hover{
     background-color: #d3ebff !important;
