--- a/pages/tabBar/index/index.wxss
+++ b/pages/tabBar/index/index.wxss
@@ -92,7 +92,28 @@ swiper-item{ overflow: initial;}
     display: inline-block;
 }
 
-.section-title .more{ font-size: 30rpx; position: relative; background-color:rgba(115, 52, 41, 0.15); color: black; border-radius: 100rpx;}
+.section-title .more{ 
+    font-size: 30rpx;
+    font-weight: bold;
+    position: relative;
+    border-radius: 100rpx;
+    border-width: 1rpx;
+    border-style: solid;
+    padding: 4rpx;
+    display: inline-block;
+}
+.section-title .more .line{
+    border: 1rpx solid rgba(0, 0, 0, 0.15);
+    border-radius: 1000rpx;
+    align-items: center;
+    display: flex;
+    padding: 10rpx 26rpx;
+  }
+.section-title .more .img{
+    width: 40rpx;
+    height: 40rpx;
+    margin-right: 10rpx;
+  }
 
 .section-content{
     padding: 30rpx 0;
