--- a/pages/tabBar/index/index.wxss
+++ b/pages/tabBar/index/index.wxss
@@ -26,7 +26,7 @@ swiper-item{ overflow: initial;}
 }
 .slide-item.active .slide-image{
     transform: scale(1, 1);
-    box-shadow: 0 40px 40px -20px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.1);
+    /* box-shadow: 0 40px 40px -20px rgba(0, 0, 0, 0.3), 0 3px 5px rgba(0, 0, 0, 0.1); */
 }
 .slide-item .slide-image{
     transform: scale(0.9, 0.9);
